plugins {
    id 'java'
    id 'com.gradleup.shadow' version '8.3.5'
}

shadowJar {
    relocate 'net.kyori', 'me.luisgamedev.betterhorses.libs.kyori'
}

group = 'dev.luisgamedev'
version = '6.1'

repositories {
    mavenLocal()
    mavenCentral()
    maven {
        name = 'papermc'
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven { url = "https://repo.dmulloy2.net/repository/public/" }
    maven { url = "https://repo.extendedclip.com/releases/" }
    maven { url = "https://jitpack.io" }
}

dependencies {
    compileOnly 'io.papermc.paper:paper-api:1.20.6-R0.1-SNAPSHOT'
    compileOnly 'com.comphenix.protocol:ProtocolLib:5.3.0'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly('com.github.MilkBowl:VaultAPI:1.7') {
        exclude group: 'org.bukkit', module: 'bukkit'
    }

    implementation 'net.kyori:adventure-api:4.17.0'
    implementation 'net.kyori:adventure-text-minimessage:4.17.0'
    implementation 'net.kyori:adventure-platform-bukkit:4.3.4'
}

java {
    toolchain.languageVersion.set(JavaLanguageVersion.of(21))
}